--- a/en/昷/昷.16992.wikitext
+++ b/en/昷/昷.16992.wikitext
@@ -15,7 +15,7 @@
 
 ===Pronunciation===
 {{zh-pron
-|m=wēn,yùn
+|m=wēn
 |c=wan1
 |mc=
 |oc=y
@@ -24,7 +24,7 @@
 }}
 
 ====References====
-* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
+*(''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
 
 ----
 
