--- a/en/昸/昸.16993.wikitext
+++ b/en/昸/昸.16993.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日竹水卜 (AHEY)}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日竹水卜 (AHEY)|ids=⿰[[日]][[冬]]}}
 
 # {{defn|Han|sort=日05}}
 
