--- a/en/昸/昸.16993.wikitext
+++ b/en/昸/昸.16993.wikitext
@@ -13,7 +13,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[dōng]] ([[dong1]]), [[huàng]] ([[huang4]])|wg=tung<sup>1</sup>, huang<sup>4</sup>}}
+{{cmn-hanzi|pin=[[dōng]] ([[dong1]])|wg=tung<sup>1</sup>}}
 
 # {{defn|lang=cmn|sort=日05}}
 
