--- a/en/昸/昸.16993.wikitext
+++ b/en/昸/昸.16993.wikitext
@@ -3,10 +3,11 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日竹水卜 (AHEY)|ids=⿰[[日]][[冬]]}}
 
-# {{defn|Han|sort=日05}}
+# (same as [[冬]]) [[winter]], 11th lunar month
 
 ====References====
 * {{Han ref|kx=0494.140|dkj=13875|hdz=21503.040|uh=6638|ud=26168}}
+*[http://yedict.com/htm/66/6638.htm yedict.com (叶典)]
 
 ----
 
