--- a/en/昺/昺.16995.wikitext
+++ b/en/昺/昺.16995.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=6022<sub>7</sub>|canj=日一人月 (AMOB)}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=6022<sub>7</sub>|canj=日一人月 (AMOB)|ids=⿱[[日]][[丙]]}}
 
 # [[bright]], [[glorious]]
 # [[brilliant]]
