--- a/en/昺/昺.16995.wikitext
+++ b/en/昺/昺.16995.wikitext
@@ -11,6 +11,15 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[bing2]]|y=bing2}}
+
+# {{defn|lang=yue|sort=日05}}
+
+----
+
 ==Korean==
 
 ===Hanja===
