--- a/en/昺/昺.16995.wikitext
+++ b/en/昺/昺.16995.wikitext
@@ -11,12 +11,21 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[bing2]]|y=bing2}}
+===Pronunciation===
+{{zh-pron
+|m=bǐng
+|c=bing2
+|mc=
+|oc=y
+|ma=
+|cat=a
+}}
 
-# {{defn|lang=yue|sort=日05}}
+===Definitions===
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -26,15 +35,6 @@
 {{ko-hanja|hangeul=병|eumhun=|rv=byeong|mr=pyŏng|y=pyeng}}
 
 # {{defn|lang=ko|sort=日05}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[bǐng]] ([[bing3]])|wg=ping<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=日05}}
 
 [[fr:昺]]
 [[pl:昺]]
