--- a/en/昻/昻.16996.wikitext
+++ b/en/昻/昻.16996.wikitext
@@ -11,6 +11,18 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[ngong4]], [[ong4]]|y=ngong4, ong4}}
+
+# {{defn|lang=yue|sort=日05}}
+
+====References====
+*[http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
+
+----
+
 ==Japanese==
 
 ===Kanji===
