--- a/en/昻/昻.16996.wikitext
+++ b/en/昻/昻.16996.wikitext
@@ -11,15 +11,24 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[ngong4]], [[ong4]]|y=ngong4, ong4}}
+===Pronunciation===
+{{zh-pron
+|m=áng
+|c=ngong4,ong4
+|mc=
+|oc=
+|ma=
+|cat=v
+}}
 
-# {{defn|lang=yue|sort=日05}}
+===Definitions===
+# {{rfdef|lang=zh}}
 
 ====References====
-*[http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
+*(''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
 
 ----
 
@@ -41,15 +50,6 @@
 {{ko-hanja|hangeul=앙|eumhun=|rv=ang|mr=ang|y=ang}}
 
 # {{defn|lang=ko|sort=日05}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[áng]] ([[ang2]])|wg=ang<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=日05}}
 
 [[fr:昻]]
 [[ko:昻]]
