--- a/en/昽/昽.16998.wikitext
+++ b/en/昽/昽.16998.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日戈大心 (AIKP)}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日戈大心 (AIKP)|ids=⿰[[日]][[龙]]}}
 
 # {{defn|Han|sort=日05}}
 
