--- a/en/显/显.16999.wikitext
+++ b/en/显/显.16999.wikitext
@@ -3,7 +3,7 @@
 {{ja-forms|[[顕]]|显|[[顯]]}}
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日廿金 (ATC)}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日廿金 (ATC)|ids=⿱[[日]][[业]]}}
 
 # [[manifest]], [[display]]
 # [[evident]], [[clear]]
