--- a/en/昿/昿.17000.wikitext
+++ b/en/昿/昿.17000.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日戈戈 (AII)}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日戈戈 (AII)|ids=⿰[[日]][[広]]}}
 
 # [[extensive]], [[wide]], [[broad]]
 # [[empty]]
