--- a/en/昿/昿.17000.wikitext
+++ b/en/昿/昿.17000.wikitext
@@ -12,6 +12,18 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[kwong3]], [[kong3]]|y=kwong3, kong3}}
+
+# {{defn|lang=yue|sort=日05}}
+
+====References====
+*[http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
+
+----
+
 ==Japanese==
 
 ===Kanji===
