--- a/en/晀/晀.17001.wikitext
+++ b/en/晀/晀.17001.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=06|sn=10|four=|canj=日中一人 (ALMO), X日中一人 (XALMO)}}
+{{Han char|rn=72|rad=日|as=06|sn=10|four=|canj=日中一人 (ALMO), X日中一人 (XALMO)|ids=⿰[[日]][[兆]]}}
 
 # {{defn|Han|sort=日06}}
 
