--- a/en/晀/晀.17001.wikitext
+++ b/en/晀/晀.17001.wikitext
@@ -10,6 +10,18 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[tiu2]]|y=tiu2}}
+
+# {{defn|lang=yue|sort=日06}}
+
+====References====
+*[http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
+
+----
+
 ==Japanese==
 
 ===Kanji===
