--- a/en/晁/晁.17002.wikitext
+++ b/en/晁/晁.17002.wikitext
@@ -1,10 +1,10 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=06|sn=10|four=6011<sub>3</sub>|canj=日中一人 (ALMO)}}
+{{Han char|rn=72|rad=日|as=06|sn=10|four=6011<sub>3</sub>|canj=日中一人 (ALMO)|ids=⿱[[日]][[兆]]}}
 
 # [[morning]], [[dawn]]
-# used as a surname
+# used as a [[surname]]
 
 ====References====
 * {{Han ref|kx=0494.210|dkj=13889|dj=0859.140|hdz=21508.150|uh=6641|ud=26177|bh=AED0|bd=44752}}
