--- a/en/旼/旼.16932.wikitext
+++ b/en/旼/旼.16932.wikitext
@@ -24,7 +24,8 @@
 ===Hanja===
 {{ko-hanja|hangeul=[[민]]|eumhun=|rv=min|mr=min|y=min}}
 
-# {{defn|lang=ko|sort=日04}}
+# [[gentle]] and [[affable]]
+# (as a name of a person) different form of [[旻]]; [[heaven]]
 
 ----
 
