--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -142,6 +142,7 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 * Finnish: {{t+|fi|oksennus}}
 * French: {{t+|fr|vomi|m}}
 * Galician: {{t|gl|vómito|m}}
+* Georgian: {{t|ka|ნარწყევი|sc=Geor}}
 * German: {{t+|de|Kotze|f}}, {{t+|de|Erbrochenes}}
 * Greek: {{t+|el|έμεσμα|n|tr=émesma}}, {{t+|el|εμετός|m}}
 * Hebrew: {{t|he|קא|tr=kei}}
@@ -179,7 +180,7 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 {{trans-bottom}}
 
 {{trans-top|the act of vomiting}}
-* Georgian: {{t|ka|პირღებინება|sc=Geor}}, {{t|ka|ჩანჩქერო|sc=Geor}}
+* Georgian: {{t|ka|პირღებინება|sc=Geor}}, {{t|ka|ჩანჩქერო|sc=Geor}}, {{t+|ka|ღებინება|sc=Geor}}, {{t|ka|რწყევა|sc=Geor}}
 {{trans-mid}}
 * Maori: {{t|mi|ruakitanga}}
 {{trans-bottom}}
