--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -190,12 +190,13 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Finnish: {{t|fi|sivukonttori}}, {{t|fi|haarakonttori}}
 * French: {{t+|fr|filiale|f}}
 * German: {{t|de|Zweigstelle|f}}, {{t+|de|Filiale|f}}
+* Greek: {{t+|el|υποκατάστημα|n|sc=Grek}}
 * Hebrew: {{t|he|סניף|m|tr=snif}}
 * Hungarian: {{t+|hu|fiók}}
 * Italian: {{t+|it|filiale|f}}, {{t|it|succursale|f}}
 * Japanese: {{t+|ja|部門|tr=ぶもん, bumon|sc=Jpan}}, {{t|ja|支店|tr=してん, shiten|sc=Jpan}}, {{t|ja|支社|tr= ししゃ, shisha|sc=Jpan}}
-* Korean: {{t+|ko|지점|sc=Kore}} ({{t+|ko|支店|sc=Kore}}), {{t+|ko|지사|sc=Kore}} ({{t+|ko|支社|sc=Kore}})
 {{trans-mid}}
+* Korean: {{t+|ko|지점|sc=Kore}} ({{t+|ko|支店|sc=Kore}}), {{t+|ko|지사|sc=Kore}} ({{t+|ko|支社|sc=Kore}})
 * Persian: {{t+|fa|شعبه|tr=šobe|sc=fa-Arab}}
 * Polish: {{t+|pl|oddział}}, {{t+|pl|filia}}
 * Portuguese: {{t+|pt|filial|f}}, {{t+|pt|departamento|m}}, {{t+|pt|divisão|f}}, {{t+|pt|repartição|f}}
@@ -224,6 +225,7 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Dutch: {{t+|nl|branch}} (of business), {{t|nl|bedrijfstak}} (of business), {{t+|nl|vakgebied}} (of knowledge)
 * Finnish: {{t+|fi|ala}}
 * German: {{t+|de|Branche|f}} (of business)
+* Greek: {{t+|el|κλάδος|m|sc=Grek}}
 * Hungarian: {{t+|hu|üzletág}}, {{t+|hu|szak}}, {{t+|hu|csoport}}
 * Italian: {{t+|it|branca|f}}
 * Polish: {{t+|pl|gałąź|f}}, {{t+|pl|dział|m}}
