--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -52,7 +52,7 @@ From {{etyl|ur|en}}/{{etyl|hi|en}} {{term|پایجامه|tr=pāyjāma|lang=ur}} 
 * Galician: {{t+|gl|pixama|m}}
 * Georgian: {{t|ka|პიჟამო|sc=Geor}}
 * German: {{t+|de|Pyjama|m}}, {{t+|de|Schlafanzug|m}}
-* Greek: {{t+|el|πιτζάμα|sc=Grek}}
+* Greek: {{t+|el|πιτζάμα|f|sc=Grek}}
 * Hebrew: {{t|he|פִּיגָ׳מָה|f|tr=pijama|sc=Hebr}}
 * Hindi: {{t|hi|पाजामा}}, {{t|hi|पैजामा}}
 * Hungarian: {{t+|hu|pizsama}}
