--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -81,7 +81,7 @@ From {{etyl|xno|en}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}})
 * Polish: {{t+|pl|budować}}, {{t+|pl|zbudować}}, {{t+|pl|tworzyć}}, {{t+|pl|stworzyć}}
 * Portuguese: {{t+|pt|fundar}}
 * Quechua: {{t|qu|tiksiy}}
-* Romanian: {{t-needed|ro}}
+* Romanian: {{t+|ro|funda}}, {{t+|ro|întemeia}}
 * Russian: {{t+|ru|основывать|impf|tr=osnóvyvat'}}, {{t+|ru|основать|pf|tr=osnovát'}}
 * Scots: {{t|sco|foond}}
 * Spanish: {{t+|es|fundar}}
