--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -65,6 +65,7 @@ From {{etyl|xno|en}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}})
 =====Translations=====
 {{trans-top|to begin building}}
 * Armenian: {{t|hy|հիմքը դնել|tr=himkʿë dnel}}, {{t|hy|հիմքը գցել|tr=himk’ë gc’el}}
+* Aromanian: {{t|rup|fundedz}}
 * Bulgarian: {{t+|bg|основавам|sc=Cyrl}}
 * Czech: {{t+|cs|založit}}
 * Danish: {{t+|da|grundlægge}}
