--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -142,7 +142,7 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 * Finnish: {{t+|fi|oksennus}}
 * French: {{t+|fr|vomi|m}}
 * Galician: {{t|gl|vómito|m}}
-* Georgian: {{t|ka|ნარწყევი|sc=Geor}}
+* Georgian: {{t|ka|ნარწყევი|sc=Geor}}, {{t|ka|ნაღებინები|sc=Geor}}
 * German: {{t+|de|Kotze|f}}, {{t+|de|Erbrochenes}}
 * Greek: {{t+|el|έμεσμα|n|tr=émesma}}, {{t+|el|εμετός|m}}
 * Hebrew: {{t|he|קא|tr=kei}}
