--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -6,7 +6,7 @@
 One possibility is that 早 is a pictograph of [[sun]] (日) over the [[horizon]]. However, it is also possible that 早 was originally a pictograph of a particular type of [[acorn]]. The shells of these [[acorns]] would be used to make a dark-colored [[dye]]. This color indicated the [[darkness]] before [[sunrise]] and the symbol then took on the meaning of ''[[early]]'' or ''[[fast]]''.
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=02|sn=6|four=6040<sub>0</sub>|canj=日十 (AJ)|ids=⿱[[日]][[十]]}}
+{{Han char|rn=72|rad=日|as=02|sn=6|four=6040<sub>0</sub>|canj=日十 (AJ)|ids=⿱日十}}
 
 ====Derived characters====
 * [[草]] [[章]] [[覃]]
