--- a/en/旦/旦.16910.wikitext
+++ b/en/旦/旦.16910.wikitext
@@ -2,6 +2,7 @@
 ==Translingual==
 
 ===Etymology===
+{{Han etyl}}
 {{Han compound|日|一|ls=ic}} – the sun (日) appearing over the horizon (一).
 
 Also simplification of [[詹]], as in [[担]].
