--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -8,7 +8,7 @@
 In current form, calligraphical rendering of 臼.
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=01|sn=5|four=|canj=中日 (LA)|ids=⿰[[丨]][[日]]}}
+{{Han char|rn=72|rad=日|as=01|sn=5|four=|canj=中日 (LA)|ids=⿰丨日}}
 
 # [[old]], [[ancient]]
 # [[former]], [[past]]
@@ -20,6 +20,7 @@ In current form, calligraphical rendering of 臼.
 * {{Han ref|kx=0489.051|dkj=13737|dj=0850.040|hdz=21483.020|uh=65E7|ud=26087}}
 
 ----
+
 ==Chinese==
 {{zh-see|舊}}
 ----
