--- a/en/意/意.15651.wikitext
+++ b/en/意/意.15651.wikitext
@@ -4,7 +4,7 @@
 {{Han compound|音|心|c1=s|c2=s|t2=heart|ls=ic}}
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=13|four=0033<sub>6</sub>|canj=卜廿日心 (YTAP)|ids=⿱[[音]][[心]]}}
+{{Han char|rn=61|rad=心|as=09|sn=13|four=0033<sub>6</sub>|canj=卜廿日心 (YTAP)|ids=⿱音心}}
 
 # [[heart]], [[soul]], [[conscience]]
 # [[thought]], [[opinion]], [[mind]]
