--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -212,6 +212,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Old Provençal: {{t|pro|Alamagna}}
 * Oriya: {{t+|or|ଜର୍ମାନୀ|sc=Orya}}
 * Pashto: {{t|ps|آلمان|tr=Âlmân|sc=ps-Arab}}
+* Pennsylvania German: {{t|pdc|Deitschland}}
 * Persian: {{t+|fa|آلمان|tr=Âlmân}}
 * Plautdietsch: {{t+|pdt|Dietschlaunt|n}}
 * Polish: {{t+|pl|Niemcy|f-p}}
