--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -156,6 +156,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * German: {{t+|de|Deutschland|n}}
 *: Middle High German: {{t|gmh|Tiutschlant|n}}
 *: Alemannic German: {{t|gsw|Dytschland}}
+*: Palatinate German: {{t|pfl|Daitschlond}}
 * Greek: {{t+|el|Γερμανία|f|tr=Germanía}}
 * Gujarati: {{t|gu|જર્મની|tr=jarmanī|sc=Gujr}}
 * Haitian Creole: {{t|ht|Almay}}
@@ -214,6 +215,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Pashto: {{t|ps|آلمان|tr=Âlmân|sc=ps-Arab}}
 * Pennsylvania German: {{t|pdc|Deitschland}}
 * Persian: {{t+|fa|آلمان|tr=Âlmân}}
+* Pitcairn-Norfolk: {{t|pih|Doichland}}
 * Plautdietsch: {{t+|pdt|Dietschlaunt|n}}
 * Polish: {{t+|pl|Niemcy|f-p}}
 * Portuguese: {{t+|pt|Alemanha|f}}
