--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -265,6 +265,9 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * West Frisian: {{t+|fy|Dútslân|n}}
 * Xhosa: {{t|xh|iJamani|c5}}
 * Yiddish: {{t|yi|דײַטשלאַנד|n|tr=Daytshland, Dajtschland|sc=Hebr}}
+* Yoruba: {{t|yo|Jẹ́mánì}}
+* Zealandic: {{t|zea|Duutsland}}
+* Zhuang: {{t+|za|Dwzgoz}}
 {{trans-bottom}}
 
 ===See also===
