--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -254,6 +254,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Uyghur: {{t|ug|گېرمانىيە|tr=gérmaniye|sc=ug-Arab}}
 * Uzbek: {{t+|uz|Olmoniya}}, {{t+|uz|Germaniya}}
 * Venetian: {{t|vec|Germania}}
+* Veps: {{t|vep|Saksanma}}
 * Vietnamese: {{t|vi|nước Đức}}, {{t+|vi|Đức}} ({{t|vi|德|sc=Hani}})
 * Vilamovian: {{t|wym|Daojćłaond}}
 * Volapük: {{t+|vo|Deutän}}, {{qualifier|obsolete}} {{t|vo|Deut}}
@@ -264,6 +265,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Welsh: {{t+|cy|Almaen|f}}
 * West Flemish: {{t|vls|Duutsland}}
 * West Frisian: {{t+|fy|Dútslân|n}}
+* Wolof: {{t|wo|Almaañ}}
 * Xhosa: {{t|xh|iJamani|c5}}
 * Yiddish: {{t|yi|דײַטשלאַנד|n|tr=Daytshland, Dajtschland|sc=Hebr}}
 * Yoruba: {{t|yo|Jẹ́mánì}}
