--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -174,6 +174,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Newari: {{t|new|जर्मनी}}
 * Norman: {{t|nrf|Allémangne|f}}
 * Kannada: {{t+|kn|ಜರ್ಮನಿ|tr=jarmani|sc=Knda}}
+* Kashubian: {{t+|csb|Miemieckô}}
 * Kazakh: {{t|kk|Германия|tr=Germaniya|sc=Cyrl}}
 * Khmer: {{t|km|​អាល្លឺម៉ង់|tr=āleumong|sc=Khmr}}
 * Korean: {{t+|ko|독일|tr=Dogil|sc=Hang}} ({{t+|ko|獨逸|sc=Hani}}); {{t+|ko|도이췰란드|tr=Doichwillandeu|sc=Hang}} {{qualifier|North Korea}}
@@ -229,6 +230,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Quechua: {{t|qu|Alimanya}}
 * Romanian: {{t+|ro|Germania|f}}
 * Russian: {{t+|ru|Германия|f|tr=Germánija}}
+* Samogitian: {{t|sgs|Vuokītėjė}}
 * Scottish Gaelic: {{t|gd|Gearmailt|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Немачка|f|sc=Cyrl}}
