--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -177,7 +177,9 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Japanese: {{t+|ja|ドイツ|tr=Doitsu}}, {{t+|ja|独逸|tr=Doitsu}} {{qualifier|obsolete}}
 * Newari: {{t|new|जर्मनी}}
 * Norman: {{t|nrf|Allémangne|f}}
+* Kabyle: {{t|kab|Lalman}}
 * Kannada: {{t+|kn|ಜರ್ಮನಿ|tr=jarmani|sc=Knda}}
+* Karakalpak: {{t|kaa|Germaniya}}
 * Kashubian: {{t+|csb|Miemieckô}}
 * Kazakh: {{t|kk|Германия|tr=Germaniya|sc=Cyrl}}
 * Khmer: {{t|km|​អាល្លឺម៉ង់|tr=āleumong|sc=Khmr}}
