--- a/en/b/bone marrow.7397.wikitext
+++ b/en/b/bone marrow.7397.wikitext
@@ -37,6 +37,7 @@
 * Portuguese: {{t+|pt|medula óssea|f}}
 * Russian: {{t|ru|костный мозг|m|tr=kóstnyj mozg}}
 * Skolt Sami: {{t|sms|õõđ}}
+* Southern Altai: {{t|alt|јилик|tr=cilik|sc=Cyrl}}
 * Spanish: {{t+|es|meollo|m}}, {{t+|es|tuétano|m}}, {{t+|es|médula|f}}
 * Swedish: {{t+|sv|benmärg|c}}
 * Turkish: {{t|tr|kemik iliği}}
