--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -139,6 +139,7 @@ From {{etyl|ang|en}} {{term|þunor|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-
 * Venetian: {{t+|vec|ton|m}}
 * Vietnamese: {{t+|vi|sấm}}, {{t+|vi|sét}}
 * Volapük: {{t|vo|töt}}
+* Walloon: {{t+|wa|tonire|f}}, {{t+|wa|tonoere|f}}
 * Welsh: {{t|cy|taranau}}
 * West Frisian: {{t|fy|tonger}}
 {{trans-bottom}}
