--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -75,6 +75,7 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 * Chinese:
 *: Cantonese: {{t|yue|打交|tr=daa2 gaau1|sc=Hani}}
 *: Mandarin: {{t|cmn|鬥爭|sc=Hani}}, {{t+|cmn|斗争|tr=dòuzhēng|sc=Hani}}, {{t+|cmn|戰鬥|sc=Hani}}, {{t+|cmn|战斗|tr=zhàndòu|sc=Hani}}, {{t|cmn|奮鬥|sc=Hani}}, {{t+|cmn|奋斗|tr=fèndòu|sc=Hani}}
+*: Min Dong: {{t|cdo|相伐|tr=soung pa|sc=Hani}}
 * Czech: {{t+|cs|bojovat}}, {{t|cs|zápasit}}, {{t+|cs|bít|alt=bít se}}
 * Danish: {{t|da|slås}}, {{t|da|kæmpe}}
 * Dutch: {{t+|nl|strijden}}, {{t+|nl|vechten}}
