--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -22,9 +22,9 @@ Alternative etymology connects {{etyl|frk|-}} {{m|frk|*blund}} to {{etyl|gem-pro
 # A person with this hair color.
 
 ====Usage notes====
-* This word can vary according to gender, with "blond" being used of males and "blonde" of females, following French usage.
-* Some writers, especially in the US, treat the spellings as interchangeable or use ''blond'' gender-neutrally.
-* Traditional terms for light hair are "''[[fair]]([[fair-haired|-haired]])''", "''[[fairheaded]]''", "''[[flaxen]]''", "''[[tow-haired]]''", and "''[[towhead]]([[towheaded|ed]])''".
+* This word can vary according to gender, with “blond” being used of males and “blonde” of females, following French usage.
+* Some writers, especially in the United States, treat the spellings as interchangeable or use “blond” gender-neutrally.
+* Traditional terms for light hair are ''[[fair]]([[fair-haired|-haired]])'', ''[[fairheaded]]'', ''[[flaxen]]'', ''[[tow-haired]]'', and ''[[towhead]]([[towheaded|ed]])''.
 
 ====Translations====
 {{trans-top|fair-haired person}}
