--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -264,6 +264,7 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{etyl|gem-pro|en}} {{m|gem-
 
 {{trans-top|to move around, to avoid the centre}}
 {{trans-mid}}
+* Maori: {{t|mi|hohoni}}
 {{trans-bottom}}
 
 {{checktrans-top}}
