--- a/en/偼/偼.11148.wikitext
+++ b/en/偼/偼.11148.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=OYSO}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=21281|canj=OYSO|ids=⿰亻⿳卜⺕龰}}
 
 # (variant of [[倢]]) [[beautiful]], [[handsome]]
 # [[woman]]
