--- a/en/圷/圷.12985.wikitext
+++ b/en/圷/圷.12985.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=03|sn=6|four=|canj=GMY}}
+{{Han char|rn=32|rad=土|as=03|sn=6|four=41130|canj=GMY|ids=⿰土下}}
 
 # {{defn|Han|sort=土03}}
 
