--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -70,7 +70,7 @@ From {{etyl|la|en}} {{term|et cētera||lang=la|and the rest" or "and so forth}}.
 ===Phrase===
 {{head|la|phrase|head=[[et]] [[cētera]]}}
 
-# And the rest; and the others; and so on.
+# and the rest; and the others; and so on
 
 ====Usage notes====
 Often abbreviated ''etc.'' or ''&c''. ''[[ampersand|Ampersand]]'' (''[[&]]'') comes from the Latin word {{term|et||and|lang=la}}.
