--- a/en/偭/偭.11133.wikitext
+++ b/en/偭/偭.11133.wikitext
@@ -25,7 +25,7 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
 
-# {{defn|lang=ja|sort=人09}}
+# [[transgress]]
 
 ====Readings====
 * {{ja-readings|on=[[べん]] (ben), [[めん]] (men)|kun=[[むかう]] (mukau), [[そむく]] (somuku), [[かなう]] (kanau)}}
