--- a/en/感/感.15666.wikitext
+++ b/en/感/感.15666.wikitext
@@ -153,7 +153,7 @@
 {{bottom}}
 
 ===Suffix===
-{{ja-pos|suffix}}
+{{ja-pos|suffix|かん}}
 
 # [[feeling]] of
 #: {{ja-usex|虚無'''感'''|きょむ'''かん'''|'''feeling of''' emptiness}}
