--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -2,7 +2,7 @@
 {{slim-wikipedia|dab=push}}
 
 ===Etymology 1===
-{{etyl|enm|en}} {{term|pushen|pushen, poshen, posson|lang=enm}}, from {{etyl|frm|en}} {{term|pousser||lang=frm}} (Modern French {{term|pousser|lang=fr}}) from {{etyl|fro|en}} {{term|poulser||lang=fro}}, from {{etyl|la|en}} {{term|pulsare|lang=la}}, frequentative of ''[[pellere]]'' (past participle ''[[pulsus]]'') "to beat, strike". Displaced native {{etyl|enm|-}} {{term|thrucchen||to push|lang=enm}} (from {{etyl|ang|-}} {{term|þryccan||to push|lang=ang}}), {{etyl|enm|-}} {{term|scauten||to push, thrust|lang=enm}} (from {{etyl|non|-}} {{term|skota||lang=non}}), {{etyl|enm|-}} {{term|schoven||to push, shove|lang=enm}} (from {{etyl|ang|-}} {{term|scofian||lang=ang}}), {{etyl|enm|-}} {{term|schuven||to shove, push|lang=enm}} (from {{etyl|ang|-}} {{m|ang|scūfan}}, {{m|ang|scēofan||to shove, push, thrust}}), {{etyl|enm|-}} {{term|thuden||lang=enm}}, {{term|thudden||to push, press, thrust|lang=enm}} (from {{etyl|ang|-}} {{m|ang|þȳdan}}, {{term|þyddan||to thrust, press, push|lang=ang}}).
+From {{etyl|enm|en}} {{m|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, from {{etyl|frm|en}} {{term|pousser||lang=frm}} (Modern French {{term|pousser|lang=fr}}) from {{etyl|fro|en}} {{term|poulser||lang=fro}}, from {{etyl|la|en}} {{term|pulsare|lang=la}}, frequentative of {{m|la|pellere}} (past participle {{m|la|pulsus}}) "to beat, strike". Displaced native {{etyl|enm|-}} {{term|thrucchen|lang=enm}} {{gloss|"to push"; > Modern English {{l/en|thrutch}}}} (from {{etyl|ang|-}} {{term|þryccan||to push|lang=ang}}), {{etyl|enm|-}} {{term|scauten||to push, thrust|lang=enm}} (from {{etyl|non|-}} {{term|skota||lang=non}}), {{etyl|enm|-}} {{term|schoven||to push, shove|lang=enm}} (from {{etyl|ang|-}} {{term|scofian||lang=ang}}), {{etyl|enm|-}} {{term|schuven||to shove, push|lang=enm}} (from {{etyl|ang|-}} {{m|ang|scūfan}}, {{m|ang|scēofan||to shove, push, thrust}}), {{etyl|enm|-}} {{term|thuden||lang=enm}}, {{term|thudden||to push, press, thrust|lang=enm}} (from {{etyl|ang|-}} {{m|ang|þȳdan}}, {{term|þyddan||to thrust, press, push|lang=ang}}).
 
 ====Pronunciation====
 * {{enPR|po͝osh}}, {{IPA|/pʊʃ/|lang=en}}
