--- a/en/想/想.15624.wikitext
+++ b/en/想/想.15624.wikitext
@@ -37,7 +37,7 @@
 
 # [[think]] {{gloss|to conceive of something or someone}}
 #* {{zh-usex|我 想 她 是 衰老 了。|I think she's going senile.}}
-# to [[think]] about; to [[plan]]; to be [[considering]]
+# to [[think]] about; to [[plan]]; to be [[considering]]; to [[speculate]]
 #* {{zh-usex|我 '''想''' 在 暑假 打工。|I'm '''planning''' to get a job for the summer.}}
 # to [[think]]; to [[suppose]]; to [[guess]]; to [[reckon]]
 #* {{zh-usex|我 想 我 能 給 你 找到 合適 的 尺碼。|I think I can find the right size for you.}}
