--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -72,6 +72,7 @@
 * Maltese: {{t|mt|Renju Unit|alt=Ir-Renju Unit}}, {{t|mt|Ir-Renju Unit tal-Gran Brittanja u l-Irlanda ta' Fuq}}
 * Mongolian: {{t|mn|Нэгдсэн Вант улс}}
 * Navajo: {{t|nv|Tótaʼ Dinéʼiʼ Bikéyah}}
+* North Frisian: {{t|frr|Feriind Kiningrik}}
 * Norwegian: {{t|no|Det forente kongerike Storbritannia og Nord-Irland}}
 * Occitan: {{t+|oc|Reialme Unit|m}}
 * Persian: {{t|fa|پادشاهی متحد|tr=Pâdešâhi-ye Mottahed|sc=fa-Arab}}
@@ -107,6 +108,7 @@
 * Vietnamese: {{t+|vi|Vương quốc Anh}}
 * Võro: {{t|vro|Ühendkuningriik}}
 * Welsh: {{t|cy|Teyrnas Unigol|f|alt=Y Deyrnas Unigol}}
+* West Frisian: {{t|fy|Feriene Keninkryk}}
 * Yiddish: {{t|yi|פֿאַראייניקט קיניגרײַך|n}}
 {{trans-bottom}}
 
