--- a/en/映/映.16968.wikitext
+++ b/en/映/映.16968.wikitext
@@ -58,7 +58,7 @@
 {{der-top|Compounds}}
 * {{ja-r|映る|うつる}}: to be [[reflect|reflected]]; to [[appear]] as an [[image]]; to [[match]] or go well with something {{qualifier|in terms of color coordination}}
 * {{ja-r|映画|えいが}}: a [[movie]]
-* {{ja-r|映写|えいしゃ}}: a [[projection]]; to [[project]] something {{qualifer|an image}}
+* {{ja-r|映写|えいしゃ}}: a [[projection]]; to [[project]] something {{qualifier|an image}}
 * {{ja-r|映像|えいぞう}}: an [[image]] {{qualifier|especially one on a screen or in one's mind}}, a [[reflection]]
 {{der-bottom}}
 
