--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -377,6 +377,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * Arabic: {{t|ar|شَغَّلَ}}
 * Armenian: {{t|hy|նվագարկել}}
 * Chinese:
+*: Cantonese: {{t|yue|放|tr=fong3|sc=Hani}}
 *: Mandarin: {{t+check|cmn|放|tr=fàng|sc=Hani}}
 * Czech: {{t+|cs|hrát}}
 * Dutch: {{t+|nl|spelen}}, {{t+|nl|afspelen}}
@@ -389,6 +390,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 {{trans-mid}}
 * Irish: {{t|ga|seinn}}
 * Italian: {{t+|it|riproduci}}
+* Japanese: {{t|ja|流す|tr=nagasu|sc=Jpan}}
 * Kurdish:
 *: Sorani: {{t+|ku|لێدان|tr=lédan|sc=ku-Arab}}
 * Latvian: {{t|lv|atskaņot}}
