--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -183,8 +183,8 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * German: {{t+|de|kommen}}
 *: Alemannic German: {{t|gsw|choo}}
 * Greek: {{t+|el|έρχομαι}}
-*: Ancient: {{t|grc|ἔρχομαι|tr=érkhomai|sc=polytonic}}
-*: Ancient: {{t|grc|ἔρχομαι|tr=érkhomai|sc=polytonic}}
+*: Ancient: {{t|grc|ἔρχομαι}}
+*: Ancient: {{t|grc|ἔρχομαι}}
 * Haitian Creole: {{t|ht|vin(i)}}
 * Hebrew: {{t+|he|בא|tr=ba}}
 * Hindi: {{t+|hi|आना|tr=ānā}}
