--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -139,7 +139,7 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 * Kannada: {{t+|kn|ಎನ್|sc=Knda}}, {{t+|kn|ಎನು|sc=Knda}}, {{t+|kn|ಮಾತಾಡು|sc=Knda}}, {{t+|kn|ಮಾತನಾಡು|sc=Knda}}
 * Kazakh: {{t+|kk|айту|sc=Cyrl}}, {{t+|kk|сөйлеу|sc=Cyrl}}, {{t+|kk|сөйлесу|sc=Cyrl}}
 * Khmer: {{t+|km|និយាយ|tr=niʔyiey|sc=Khmr}}
-* Korean: {{t+|ko|말하다|sc=Hang}}
+* Korean: {{t+|ko|말하다|sc=Hang}}, {{t+|ko|말씀하다|sc=Kore}} {{qualifier|honorific}}
 * Kyrgyz: {{t+|ky|айтуу|sc=Cyrl}}, {{t+|ky|сүйлөө|sc=Cyrl}}
 * Ladin: {{t|lld|rujné}}
 * Lao: {{t|lo|ເວົ້າ|sc=Laoo}}
