--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -200,7 +200,7 @@ From {{etyl|la|en}} {{m|la|porta||passage, gate}}, reinforced in {{etyl|enm|en}}
 # An opening or doorway in the side of a [[ship]], especially for boarding or loading; an [[embrasure]] through which a cannon may be discharged; a [[porthole]].
 #: ''...her '''ports''' being within sixteen inches of the water...'' — [[w:Walter Raleigh|Sir W. Raleigh]]
 # {{label|en|curling|bowls}} A space between two [[stone]]s wide enough for a delivered stone or bowl to pass through.
-# An opening where a connection (such as a pipe) is made.
+# An [[opening]] where a [[connection]] (such as a pipe) is made.
 # {{label|en|computing}} A logical or physical construct in and from which data are transferred. {{pedialite|Computer port (hardware)}}
 # {{label|en|computing}} A female connector of an electronic device, into which a cable's male connector can be inserted.
 
