--- a/en/惪/惪.15615.wikitext
+++ b/en/惪/惪.15615.wikitext
@@ -12,19 +12,7 @@
 ----
 
 ==Chinese==
-{{zh-forms}}
-
-===Pronunciation===
-{{zh-pron
-|m=dé
-|c=dak1
-|mc=y
-|oc=y
-|cat=n
-}}
-
-====References====
-* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 108]
+{{zh-see|德|v}}
 
 ----
 
