--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -96,8 +96,9 @@ The traditional etymology follows the modern form in finding {{liushu|ic}}: {{m|
 ===Kanji===
 {{ja-kanji|grade=2|rs=日04}}
 
-# clear
-# tomorrow
+# [[clear]]
+# [[tomorrow]]
+# [[bright]]
 
 ====Readings====
 * {{ja-readings|kanon=[[めい]] (mei)|goon=[[みょう]] (myō)|toon=[[みん]] (min)|kun=[[あかるい]] ([[明るい]], akarui), [[あきらか]] ([[明らか]], akiraka), [[あける]] ([[明ける]], akeru), [[あかす]]　([[明かす, akasu]])}}
