--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -147,6 +147,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 {{trans-mid}}
 * Latin: {{t|la|lūdō}}
 * Latvian: {{t|lv|spēlēt}}
+* Lingala: {{t|ln|kosakana}}
 * Lithuanian: {{t+|lt|žaisti}}
 * Macedonian: {{t|mk|игра}}
 * Malay: {{t|ms|bermain}}
