--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -87,6 +87,7 @@ From {{etyl|ang|en}} {{m|ang|þunor}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*þu
 * Hindi: {{t|hi|गरज|f|tr=garaj|sc=Deva}}, {{t|hi|गड़गड़ाहट|f|tr=gaṛgaṛāhaṭ|sc=Deva}}
 * Hungarian: {{t+|hu|mennydörgés}}, {{t|hu|égzengés}}
 * Icelandic: {{t+|is|þruma|f}}
+* Ido: {{t+|io|tondro}}
 * Indonesian: {{t+|id|guntur}}, {{t+|id|guruh}}
 * Interlingue: {{t|ie|tónnere}}
 * Irish: {{t+|ga|toirneach|m}}
@@ -95,6 +96,7 @@ From {{etyl|ang|en}} {{m|ang|þunor}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*þu
 * Khmer: {{t+|km|ផ្គរ|tr=pkɔɔ|sc=Khmr}}
 * Korean: {{t|ko|우레|sc=Kore}}, {{t+|ko|천둥|sc=Kore}}
 * Kott: {{t|zko|ajak}}
+* Kurdish: {{t+|ku|birûsk|sc=ku-Arab}}
 * Lao: {{t+|lo|ຟ້າຮ້ອງ|tr=fā hǭng|sc=Laoo}}
 * Latgalian: {{t|ltg|pārkiuņs}}
 * Latin: {{t|la|tonus|m}}, {{t|la|tonitrus|m}}, {{t|la|tonitruum|n}}
@@ -105,6 +107,7 @@ From {{etyl|ang|en}} {{m|ang|þunor}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*þu
 * Macedonian: {{t+|mk|гром|m|tr=grom}}
 * Malagasy: {{t+|mg|ampy}}
 * Malay: {{t|ms|guruh}}, {{t|ms|guntur}}
+* Malayalam: {{t+|ml|ഇടി|sc=Mlym}}
 * Manx: {{t|gv|taarnagh|m}}
 * Maore Comorian: {{t|swb|guguma}}
 * Maori: {{t|mi|whaitiri}}
