--- a/en/昚/昚.16962.wikitext
+++ b/en/昚/昚.16962.wikitext
@@ -12,24 +12,8 @@
 
 ----
 
-==Cantonese==
-
-===Hanzi===
-{{yue-hanzi|jyut=[[san6]]|y=san6}}
-
-# {{defn|lang=yue|sort=日05}}
-
-====References====
-* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[shèn]] ([[shen4]])|wg=shen<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=日05}}
+==Chinese==
+{{zh-see|慎|v}}
 
 [[fr:昚]]
 [[pl:昚]]
