--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -99,7 +99,7 @@
 *: Upper Sorbian: {{t|hsb|Zjednoćene kralestwo}}
 * Spanish: {{t+|es|Reino Unido|m}}
 * Swedish: {{t+|sv|Förenade kungariket}}; {{qualifier|colloquially:}} {{t+|sv|England}}
-* Tagalog: {{t-check|tl|United Kingdom}}
+* Tagalog: {{t̟|tl|Nagkakaisang Kaharian.}}
 * Tajik: {{t+|tg|Подшоҳии Муттаҳида}}
 * Tamil: {{t+|ta|ஐக்கிய இராச்சியம்}}
 * Tatar: {{t|tt|Берләшкән Патшалык}}
