--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -135,7 +135,7 @@ As there is no adjective derived from New Zealand, it is also used in the attrib
 * Norwegian:
 *: Bokmål: {{t|nb|newzealandsk}}, {{t|nb|nyzealandsk}}
 *: Nynorsk: {{t|nn|newzealandsk}}, {{t|nn|nyzealandsk}}
-* Romanian: {{t+|ro|neozeelandez|m}}
+* Romanian: {{t+|ro|neozeelandez}}
 * Swedish: {{t+|sv|nyzeeländsk}}
 {{trans-bottom}}
 
