--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -6,7 +6,7 @@ From {{etyl|enm|en}} {{m|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, from 
 
 ====Pronunciation====
 * {{enPR|po͝osh}}, {{IPA|/pʊʃ/|lang=en}}
-* {{audio|en-us-push.ogg|Audio (US)|lang=en}}
+* {{audio|en-us-push.ogg|Audio (US)|lang=en}} {{IPA|[pʷʊʃ]|lang=en}}
 * {{rhymes|ʊʃ|lang=en}}
 
 ====Verb====
