--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -106,8 +106,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Norman: {{t|nrf|bieau|m}}, {{t|nrf|belle|f}}
 * Kalmyk: {{t-needed|xal}}
 * Kazakh: {{t+|kk|әдемі|sc=Cyrl}}, {{t|kk|әсем|sc=Cyrl}}
-* Khanty:
-*: {{ttbc|Kazym}}<!-- name not recognised by xte: update [[Template:scriptrev]] or [[Template:langrev]] and [[Module:languages]] appropriately or report to [[User talk:Kephir/gadgets/xte]] -->: {{t|kca|хурамӑӈ}}
+* Khanty: {{t|kca|хурамӑӈ}} {{qual|Kazym}}
 * Khmer: {{t+|km|ស្អាត|tr=saāt}}, {{t+|km|ល្អ|tr=l'ɑɑ|sc=Khmr}}
 * Korean: {{qualifier|attributive}} {{t+|ko|아름다운|sc=Kore}}, {{qualifier|predicative}} {{t+|ko|아름답다|sc=Kore}}
 * Kurdish:
