--- a/en/惹/惹.15629.wikitext
+++ b/en/惹/惹.15629.wikitext
@@ -26,10 +26,15 @@
 |cat=v
 }}
 
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
+
 ====References====
-* (''Hakka'') [http://minhakka.ling.sinica.edu.tw/bkg/hakyin/ Academia Sinica - Hakka-English Dictionary]
-* (''Hakka'') Lau, Chun-fat. ''Hakka Pinyin Dictionary'' (Chinese). [[Hong Kong]]: [[w:Chinese University of Hong Kong|The Chinese University Press]], 1997 <small>(Chinese IME supplement)</small> ISBN 962-201-750-9.
-* (''Min Nan'') [http://twblg.dict.edu.tw/holodict_new/result_detail.jsp?n_no=9452&curpage=1&sample=%E6%83%B9&radiobutton=1&querytarget=1&limit=20&pagenum=1&rowcount=4 Taiwan Min Nan Common Words Dictionary (臺灣閩南語常用詞辭典)]
+* {{qual|Hakka}} [http://minhakka.ling.sinica.edu.tw/bkg/hakyin/ Academia Sinica - Hakka-English Dictionary]
+* {{qual|Hakka}} {{R:hak:Lau 1997}}
+* {{qual|Min Nan}} {{thcwd|9452}}
 
 ----
 
