--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -72,6 +72,7 @@ From {{etyl|enm|en}} {{m|enm|flesh}}, from {{etyl|ang|en}} {{m|ang|flǣsc}}, fro
 {{trans-mid}}
 * Latvian: {{t+|lv|miesa|f}}, {{t+|lv|ķermenis|m}}
 * Lithuanian: {{t+|lt|kūnas}}
+* Macedonian: {{t|mk|месо|n|tr=meso|sc=Cyrl}}
 * Maori: {{t|mi|kiko}}, {{t|mi|tōrōpuku}}
 * Navajo: {{t|nv|atsįʼ}}
 * Polish: {{t+|pl|ciało|n}}, {{t+|pl|mięso|n}}
