--- a/en/想/想.15624.wikitext
+++ b/en/想/想.15624.wikitext
@@ -85,9 +85,9 @@
 }}
 
 ====References====
-* (''Hakka'') [http://minhakka.ling.sinica.edu.tw/bkg/hakyin/search.php?DETAIL=1&LIMIT=id=39415&dbname=su_tian_1&graph=2 Academia Sinica - Hakka-English Dictionary]
-* (''Hakka'') Lau, Chun-fat. ''Hakka Pinyin Dictionary'' (Chinese). [[Hong Kong]]: [[w:Chinese University of Hong Kong|The Chinese University Press]], 1997 <small>(Chinese IME supplement)</small> ISBN 962-201-750-9.
-* (''Min Nan'') {{thcwd|9450}}
+* {{qual|Hakka}} [http://minhakka.ling.sinica.edu.tw/bkg/hakyin/search.php?DETAIL=1&LIMIT=id=39415&dbname=su_tian_1&graph=2 Academia Sinica - Hakka-English Dictionary]
+* {{qual|Hakka}} {{R:hak:Lau 1997}}
+* {{qual|Min Nan}} {{thcwd|9450}}
 
 ----
 
